# setenv-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md  install-wrapper.sh
.github/workflows/: ci.yml  release.yml  security.yml
src/: config.rs  main.rs  shell.rs
wrappers/: setenv.bash  setenv.fish
